hphp/test/zend/good/tests/classes/protected_001.php.expectf
Call fail()

Fatal error: Call to protected pass::fail() from invalid context in %s/protected_001.php on line 14
